@@ -1,5 +1,8 @@
 # 5.1
 - Adds inserting songs after the currently playing queue item
+- Adds selecting a song by clicking on its text-area
+- Adds opening song's context menu by right-clicking on its text-area
+- Adds dedicated button to open a song's context menu in some places
 - Fixes showing error message if mpc is not installed
 - Fixes cover cache not rotating properly
 - Minor UI tweaks
